# ds-algo

./: .gitignore  CMakeLists.txt  README.md  bloom_filter.cpp  bloom_filter.h  dsalgo  lru_cache.cpp  lru_cache.h  main.c  main.cpp  r.sh  shortest_path.cpp  start.cpp  test.cpp
_clang/: .clang-tidy
containers/: bloom_filter.cpp  hash_open_addressing.cpp  linked_list.h  lru_cache.cpp  matrix.cpp
include/lib/: doubly_linked_list.h  lru_cache.h
quadratic_equations/: main.c
scripts/: m.sh  r2.sh
src/: doubly_linked_list.cpp  iterators.cpp  lru_cache.cpp  utils.cpp
src/algorithms/: binary_search.cpp  heap_sort.cpp  insertion_sort.cpp  permutation.h  quick_sort.cpp
src/algorithms/quadratic_equations/: main.c
src/containers/: bigint.h  binary_search_tree.cpp  bloom_filter.h  doubly_linked_list.h  hash_table_chaining.cpp  heap.cpp  stack.cpp
src/solutions/: 1569_a.cpp
src/solutions/codeforces/: 1567_a.cpp
system/: bucket_allocator.cpp  smart_pointers.cpp
tests/: bst_test.cpp
